8177845: Need a mechanism to load Graal
Reviewed-by: kvn, iveresov, mchung